# camera-display

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  platformio.ini  sdkconfig.defaults
components/ble_pair/: CMakeLists.txt  Kconfig  ble_pair.cpp  ble_pair_state.cpp
components/ble_pair/host_tests/: Makefile  test_ble_pair_state.cpp
components/ble_pair/include/: ble_pair.h
components/ble_pair/include/internal/: ble_pair_state.h
components/decoder/: CMakeLists.txt  decoder.cpp
components/decoder/include/: decoder.h
components/display/: CMakeLists.txt  display.cpp  test_patterns.cpp
components/display/host_tests/: CMakeLists.txt  Makefile  test_patterns.cpp
components/display/include/: display.h  lgfx_ili9341_config.h
components/espnow_link/: CMakeLists.txt  Kconfig  espnow_link.cpp
components/espnow_link/host_tests/: Makefile  test_peer_mac.cpp
components/espnow_link/include/: espnow_link.h  (+1 more)
components/link_state/: CMakeLists.txt  link_state.cpp
components/pair_nvs/: CMakeLists.txt  pair_nvs.cpp
components/reassembly/: CMakeLists.txt  reassembly.cpp
components/render/: CMakeLists.txt  render.cpp
docs/: HANDOFF-rx-multicore-freeze.md
docs/audits/: sprint-1-security.md  sprint-2-parser-hardening-requirements.md  sprint-2-security.md  sprint-3-security.md  sprint-4-security.md
docs/reviews/: sprint-1-review.md  sprint-2-review.md  sprint-3-review.md  sprint-4-review.md
docs/superpowers/: sprint-1-task-2.5-multimeter-check.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml  pinout.h
(+24 files in other folders)
